# uplift-bench

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml
configs/: config.yaml
configs/base_learner/: catboost.yaml  lightgbm.yaml  logreg.yaml
configs/dataset/: criteo.yaml  hillstrom.yaml  lenta.yaml  megafon.yaml  retailhero.yaml  synthetic.yaml
configs/experiment/: full_benchmark.yaml  quick_smoke.yaml
configs/model/: causal_forest.yaml  class_transformation.yaml  dr_learner.yaml  r_learner.yaml  s_learner.yaml  t_learner.yaml  x_learner.yaml
data/sample/: README.md
data/sample/hillstrom/: hillstrom.csv
data/sample/lenta/: lenta_dataset.parquet
data/sample/megafon/: train.csv
data/sample/retailhero/: clients.csv  uplift_train.csv
docs/: architecture.md  datasets.md  index.md  methodology.md  reproducing.md  results.md  validation.md  why_synthetic.md
docs/api/: data.md  metrics.md  models.md  robustness.md
notebooks/: 03_results_analysis.ipynb
outputs/2026-05-03/22-23-43/.hydra/: hydra.yaml
outputs/2026-05-03/22-24-24/.hydra/: config.yaml  hydra.yaml  (+1 more)
outputs/benchmark/causal_forest_hillstrom_seed42/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/causal_forest_hillstrom_seed43/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/causal_forest_hillstrom_seed44/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/class_transformation_hillstrom_seed42/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/class_transformation_hillstrom_seed43/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/class_transformation_hillstrom_seed44/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/dr_learner_hillstrom_seed42/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/dr_learner_hillstrom_seed43/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/dr_learner_hillstrom_seed44/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/r_learner_hillstrom_seed42/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/r_learner_hillstrom_seed43/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/r_learner_hillstrom_seed44/: config.json  deciles.csv  permutation_importance.csv  propensity.csv
outputs/benchmark/s_learner_hillstrom_seed42/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/s_learner_hillstrom_seed43/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/s_learner_hillstrom_seed44/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/t_learner_hillstrom_seed42/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/t_learner_hillstrom_seed43/: config.json  deciles.csv  permutation_importance.csv  propensity.csv
outputs/benchmark/t_learner_hillstrom_seed44/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/x_learner_hillstrom_seed42/: config.json  deciles.csv  permutation_importance.csv  propensity.csv
outputs/benchmark/x_learner_hillstrom_seed43/: config.json  deciles.csv  permutation_importance.csv
outputs/benchmark/x_learner_hillstrom_seed44/: config.json  deciles.csv  permutation_importance.csv
outputs/criteo/dr_learner_criteo_seed42/: config.json  deciles.csv
outputs/criteo/r_learner_criteo_seed42/: config.json  deciles.csv
outputs/criteo/s_learner_criteo_seed42/: config.json  deciles.csv
outputs/criteo/t_learner_criteo_seed42/: config.json  deciles.csv
outputs/criteo/x_learner_criteo_seed42/: config.json  deciles.csv  propensity.csv
outputs/s_learner_hillstrom_seed42/: config.json  deciles.csv
results/: README.md  benchmark_results.md  benchmark_summary.csv  benchmark_summary.md  criteo_results.csv  criteo_results.md  hillstrom_results.csv
results/figures/: comparison_manifest.json
results/per_dataset/: criteo.csv  criteo.md  hillstrom.csv  hillstrom.md  synthetic.csv  synthetic.md
scripts/: aggregate_results.py  build_comparison_plots.py  build_sample_fixtures.py  extend_results_with_new_metrics.py  run_full_benchmark.py
src/uplift_bench/: __init__.py  _presets.py  cli.py
src/uplift_bench/config/: schemas.py
src/uplift_bench/data/: base.py  criteo.py  download.py  factory.py  hillstrom.py  lenta.py  megafon.py  retailhero.py  splits.py  synthetic.py  synthetic_loader.py  validation.py
src/uplift_bench/metrics/: _common.py  auuc.py  bootstrap.py  cumulative_gain.py  decile.py  policy_value.py  qini.py  uplift_at_k.py
src/uplift_bench/models/: _base_learners.py  base.py  causal_forest.py  class_transformation.py  dr_learner.py  factory.py  r_learner.py  s_learner.py  t_learner.py  utils.py  x_learner.py
src/uplift_bench/pipelines/: benchmark.py  report.py  train.py
src/uplift_bench/robustness/: feature_drop.py  learning_curve.py  overlap.py  permutation.py
src/uplift_bench/tracking/: mlflow_logger.py
src/uplift_bench/utils/: io.py  logging.py  reproducibility.py
src/uplift_bench/viz/: comparison_plots.py  diagnostic_plots.py  qini_curve.py  uplift_distribution.py
tests/: conftest.py
tests/fixtures/: synthetic.py
tests/integration/: test_method_divergence.py  test_pipeline_end_to_end.py
tests/unit/: test_diagnostic_plots.py  test_extra_coverage.py  test_factories_and_tracking.py
tests/unit/data/: test_criteo.py  test_download.py  test_loaders.py  test_splits.py  test_synthetic.py  test_synthetic_loader.py  test_validation.py
tests/unit/metrics/: test_auuc.py  test_bootstrap.py  test_cumulative_gain.py  test_decile.py  test_policy_value.py  test_qini.py  test_uplift_at_k.py
tests/unit/models/: test_models.py
tests/unit/robustness/: test_robustness.py
tests/unit/utils/: test_io.py  test_logging.py  test_reproducibility.py
