[project]
name = "uplift-bench"
version = "0.1.0"
description = "Benchmark of 7 uplift modeling approaches across 4 public datasets with bootstrap CIs and robustness analysis."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Danila Yablochnikov", email = "yablochnikovdanila@gmail.com" },
]
keywords = ["uplift", "causal-inference", "benchmark", "treatment-effect", "ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime deps are intentionally split into extras so the core install stays light.
# Heavy ML libs (catboost, lightgbm, mlflow, hydra, causalml, econml) live in [bench].
dependencies = [
    "numpy>=1.26,<2.2",
    "pandas>=2.1,<2.3",
    "scipy>=1.11,<1.15",
    "scikit-learn>=1.4,<1.6",
    "pyarrow>=15.0",
    "pydantic>=2.6,<3",
    "click>=8.1",
    "structlog>=24.1",
    "joblib>=1.3",
    "tqdm>=4.66",
    "requests>=2.31",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# Heavy bits — only needed when actually running models / tracking experiments.
bench = [
    "catboost>=1.2.5",
    "lightgbm>=4.3",
    "scikit-uplift>=0.5.1",
    "causalml>=0.15.0",
    "econml>=0.15.0",
    "mlflow>=2.13,<3",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pandas-stubs>=2.1",
    "types-requests>=2.31",
    "types-tqdm>=4.66",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-include-markdown-plugin>=6.0",
]

[project.scripts]
uplift-bench = "uplift_bench.cli:main"

[project.urls]
Homepage = "https://github.com/yablochnikovds/uplift-bench"
Repository = "https://github.com/yablochnikovds/uplift-bench"
Documentation = "https://yablochnikovds.github.io/uplift-bench"
Issues = "https://github.com/yablochnikovds/uplift-bench/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uplift_bench"]

# ------------------------------------------------------------------ #
# ruff
# ------------------------------------------------------------------ #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["notebooks", "data", "mlruns", "site"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "C4",               # comprehensions
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "N",                # naming
    "PL",               # pylint subset
    "PT",               # pytest style
    "TID",              # tidy imports
]
ignore = [
    # ML code legitimately uses single-letter math names: X, y, T, te
    "N803", "N806",
    # Magic numbers are fine in scientific code (e.g. 1.96 for z-score)
    "PLR2004",
    # We do allow long-ish signatures in the model layer
    "PLR0913",
    # 1 statement per line is fine; we don't enforce
    "PLR0912", "PLR0915",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "PT011"]
"scripts/**" = ["T201"]
"notebooks/**" = ["E402", "F401"]
# CLI uses lazy imports on purpose — heavy deps like pandas/hydra/mlflow
# would push `uplift-bench --help` from ~30ms to ~1.2s otherwise.
"src/uplift_bench/cli.py" = ["PLC0415"]
# Logging / repro modules use module-level state by design.
"src/uplift_bench/utils/logging.py" = ["PLW0603"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ------------------------------------------------------------------ #
# mypy
# ------------------------------------------------------------------ #
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

# Third-party stubs that don't ship .pyi files.
[[tool.mypy.overrides]]
module = [
    "sklift.*",
    "causalml.*",
    "econml.*",
    "catboost.*",
    "lightgbm.*",
    "mlflow.*",
    "hydra.*",
    "omegaconf.*",
    "joblib.*",
    "matplotlib.*",
    "scipy.*",
    "sklearn.*",
]
ignore_missing_imports = true

# Tests can be a bit looser on Any-returns since fixtures generate dynamic data.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_generics = false
warn_return_any = false

# ------------------------------------------------------------------ #
# pytest
# ------------------------------------------------------------------ #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks slow integration tests (deselect with -m 'not slow')",
    "needs_data: marks tests that need a real dataset on disk",
]
filterwarnings = [
    "error",
    # CatBoost / LightGBM emit a ton of FutureWarnings we don't own.
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # sklearn warns about convergence on tiny synthetic fixtures.
    "ignore:.*ConvergenceWarning.*",
    # Logreg overflow on un-scaled features inside small-sample CV folds.
    # We see these when the test fixture happens to have a near-degenerate
    # feature; the resulting prediction is still valid (sklearn returns
    # 0.5 probability), and the symptom is harmless.
    "ignore:.*divide by zero encountered in matmul.*:RuntimeWarning",
    "ignore:.*overflow encountered in matmul.*:RuntimeWarning",
    "ignore:.*invalid value encountered in matmul.*:RuntimeWarning",
    # joblib parallel returns dimensionless lists; numpy nags on conversion.
    "ignore:.*invalid value encountered in scalar.*:RuntimeWarning",
]

# ------------------------------------------------------------------ #
# coverage
# ------------------------------------------------------------------ #
[tool.coverage.run]
branch = true
source = ["src/uplift_bench"]
omit = [
    "src/uplift_bench/cli.py",      # thin click shim, exercised by integration tests
    "src/uplift_bench/viz/*",       # plotting functions are visually verified
]
parallel = true

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",    # we explicitly forbid these in code, but coverage rule is standard
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.coverage.paths]
source = ["src/uplift_bench", "*/site-packages/uplift_bench"]
